solving shapes problem

--- a/mol2dreams/notebooks/molecule_feauturizer.ipynb
+++ b/mol2dreams/notebooks/molecule_feauturizer.ipynb
@@ -6,11 +6,12 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:51:09.785966Z",
-     "start_time": "2024-10-06T14:51:07.401986Z"
+     "end_time": "2024-10-07T09:20:40.162425Z",
+     "start_time": "2024-10-07T09:20:38.122898Z"
     }
    },
    "source": [
+    "import numpy as np\n",
     "import torch\n",
     "from torch_geometric.data import DataLoader\n",
     "from rdkit import Chem\n",
@@ -25,8 +26,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:51:09.794669Z",
-     "start_time": "2024-10-06T14:51:09.790646Z"
+     "end_time": "2024-10-07T09:20:40.182508Z",
+     "start_time": "2024-10-07T09:20:40.176052Z"
     }
    },
    "cell_type": "code",
@@ -68,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:51:10.598307Z",
-     "start_time": "2024-10-06T14:51:10.592912Z"
+     "end_time": "2024-10-07T09:20:40.239556Z",
+     "start_time": "2024-10-07T09:20:40.235570Z"
     }
    },
    "cell_type": "code",
@@ -138,8 +139,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:51:13.866268Z",
-     "start_time": "2024-10-06T14:51:13.863836Z"
+     "end_time": "2024-10-07T09:20:40.244784Z",
+     "start_time": "2024-10-07T09:20:40.243068Z"
     }
    },
    "cell_type": "code",
@@ -154,8 +155,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:51:14.695231Z",
-     "start_time": "2024-10-06T14:51:14.692865Z"
+     "end_time": "2024-10-07T09:20:40.251165Z",
+     "start_time": "2024-10-07T09:20:40.249657Z"
     }
    },
    "cell_type": "code",
@@ -167,8 +168,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:51:44.031100Z",
-     "start_time": "2024-10-06T14:51:15.711219Z"
+     "end_time": "2024-10-07T09:21:08.771690Z",
+     "start_time": "2024-10-07T09:20:40.256022Z"
     }
    },
    "cell_type": "code",
@@ -180,8 +181,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:51:44.035585Z",
-     "start_time": "2024-10-06T14:51:44.034009Z"
+     "end_time": "2024-10-07T09:21:08.779386Z",
+     "start_time": "2024-10-07T09:21:08.777504Z"
     }
    },
    "cell_type": "code",
@@ -193,8 +194,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:51:44.045623Z",
-     "start_time": "2024-10-06T14:51:44.041457Z"
+     "end_time": "2024-10-07T09:23:24.492329Z",
+     "start_time": "2024-10-07T09:23:24.485773Z"
     }
    },
    "cell_type": "code",
@@ -203,18 +204,18 @@
     "for spectrum in spectra_small:\n",
     "    entry = {}\n",
     "    entry['smiles'] = spectrum.metadata.get('smiles', None)\n",
-    "    entry['spectrum'] = spectrum.peaks.mz.tolist() and spectrum.peaks.intensities.tolist() \n",
+    "    entry['embedding'] = torch.zeros(1024)\n",
     "    list_smiles.append(entry)\n"
    ],
    "id": "302cabf99239e9a",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:51:44.217245Z",
-     "start_time": "2024-10-06T14:51:44.052146Z"
+     "end_time": "2024-10-07T09:23:25.063134Z",
+     "start_time": "2024-10-07T09:23:24.890468Z"
     }
    },
    "cell_type": "code",
@@ -227,26 +228,113 @@
    "id": "8e69bfaa6312840f",
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Featurizing dataset: 100%|██████████| 50/50 [00:00<00:00, 295.81it/s]"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Number of successfully featurized molecules: 50\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:52:01.879122Z",
-     "start_time": "2024-10-06T14:51:59.994674Z"
+     "end_time": "2024-10-07T09:23:25.201044Z",
+     "start_time": "2024-10-07T09:23:25.198048Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data_list",
+   "id": "17ab11c0aca19837",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Data(x=[21, 84], edge_index=[2, 44], edge_attr=[44, 7], y=[1, 1024]),\n",
+       " Data(x=[21, 84], edge_index=[2, 44], edge_attr=[44, 7], y=[1, 1024]),\n",
+       " Data(x=[21, 84], edge_index=[2, 44], edge_attr=[44, 7], y=[1, 1024]),\n",
+       " Data(x=[21, 84], edge_index=[2, 44], edge_attr=[44, 7], y=[1, 1024]),\n",
+       " Data(x=[21, 84], edge_index=[2, 44], edge_attr=[44, 7], y=[1, 1024]),\n",
+       " Data(x=[21, 84], edge_index=[2, 44], edge_attr=[44, 7], y=[1, 1024]),\n",
+       " Data(x=[21, 84], edge_index=[2, 44], edge_attr=[44, 7], y=[1, 1024]),\n",
+       " Data(x=[21, 84], edge_index=[2, 44], edge_attr=[44, 7], y=[1, 1024]),\n",
+       " Data(x=[21, 84], edge_index=[2, 44], edge_attr=[44, 7], y=[1, 1024]),\n",
+       " Data(x=[21, 84], edge_index=[2, 44], edge_attr=[44, 7], y=[1, 1024]),\n",
+       " Data(x=[21, 84], edge_index=[2, 44], edge_attr=[44, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[23, 84], edge_index=[2, 48], edge_attr=[48, 7], y=[1, 1024]),\n",
+       " Data(x=[31, 84], edge_index=[2, 68], edge_attr=[68, 7], y=[1, 1024]),\n",
+       " Data(x=[31, 84], edge_index=[2, 68], edge_attr=[68, 7], y=[1, 1024]),\n",
+       " Data(x=[31, 84], edge_index=[2, 68], edge_attr=[68, 7], y=[1, 1024]),\n",
+       " Data(x=[31, 84], edge_index=[2, 68], edge_attr=[68, 7], y=[1, 1024]),\n",
+       " Data(x=[31, 84], edge_index=[2, 68], edge_attr=[68, 7], y=[1, 1024]),\n",
+       " Data(x=[31, 84], edge_index=[2, 68], edge_attr=[68, 7], y=[1, 1024]),\n",
+       " Data(x=[31, 84], edge_index=[2, 68], edge_attr=[68, 7], y=[1, 1024]),\n",
+       " Data(x=[31, 84], edge_index=[2, 68], edge_attr=[68, 7], y=[1, 1024])]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 14
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-07T09:23:27.232879Z",
+     "start_time": "2024-10-07T09:23:25.801905Z"
     }
    },
    "cell_type": "code",
    "source": [
     "batch_size = 32\n",
-    "loader = DataLoader(data_list, batch_size=batch_size, shuffle=True, num_workers=4)\n",
+    "loader = DataLoader(data_list, batch_size=batch_size, shuffle=True, num_workers=1)\n",
     "\n",
     "for batch in loader:\n",
     "    print(batch)\n",
@@ -263,22 +351,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataBatch(x=[772, 84], edge_index=[2, 1632], edge_attr=[1632, 7], y=[32, 1024], batch=[772], ptr=[33])\n",
+      "DataBatch(x=[752, 84], edge_index=[2, 1584], edge_attr=[1584, 7], y=[32, 1024], batch=[752], ptr=[33])\n",
       "Batch size: 32\n",
-      "Node feature shape: torch.Size([772, 84])\n",
-      "Edge index shape: torch.Size([2, 1632])\n",
-      "Edge feature shape: torch.Size([1632, 7])\n",
+      "Node feature shape: torch.Size([752, 84])\n",
+      "Edge index shape: torch.Size([2, 1584])\n",
+      "Edge feature shape: torch.Size([1584, 7])\n",
       "Spectrum embedding shape: torch.Size([32, 1024])\n"
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:24:37.697432Z",
-     "start_time": "2024-10-06T14:24:37.696090Z"
+     "end_time": "2024-10-07T09:21:10.694674Z",
+     "start_time": "2024-10-07T09:21:10.693319Z"
     }
    },
    "cell_type": "code",
@@ -290,8 +378,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:24:37.704965Z",
-     "start_time": "2024-10-06T14:24:37.703584Z"
+     "end_time": "2024-10-07T09:21:10.703210Z",
+     "start_time": "2024-10-07T09:21:10.701946Z"
     }
    },
    "cell_type": "code",
@@ -303,8 +391,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:24:37.713171Z",
-     "start_time": "2024-10-06T14:24:37.711648Z"
+     "end_time": "2024-10-07T09:21:10.712068Z",
+     "start_time": "2024-10-07T09:21:10.710795Z"
     }
    },
    "cell_type": "code",
@@ -316,8 +404,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-06T14:24:37.720852Z",
-     "start_time": "2024-10-06T14:24:37.719315Z"
+     "end_time": "2024-10-07T09:21:10.720994Z",
+     "start_time": "2024-10-07T09:21:10.719519Z"
     }
    },
    "cell_type": "code",
