creating contrastive dataset

--- a/mol2dreams/notebooks/massspecgym_dreams_embedding.ipynb
+++ b/mol2dreams/notebooks/massspecgym_dreams_embedding.ipynb
@@ -585,8 +585,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:30:03.104255Z",
-     "start_time": "2024-10-07T09:30:01.600823Z"
+     "end_time": "2024-10-07T09:46:21.195150Z",
+     "start_time": "2024-10-07T09:46:19.330827Z"
     }
    },
    "cell_type": "code",
@@ -618,7 +618,7 @@
     "    print(f\"Edge index shape: {batch.edge_index.shape}\")  \n",
     "    print(f\"Edge feature shape: {batch.edge_attr.shape}\") \n",
     "    print(f\"Spectrum embedding shape: {batch.y.shape}\")  \n",
-    "    break  "
+    "    break"
    ],
    "id": "2eb36a00ed872708",
    "outputs": [
@@ -626,16 +626,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataBatch(x=[1555, 84], edge_index=[2, 3164], edge_attr=[3164, 7], y=[32, 1024], IDENTIFIER=[32], COLLISION_ENERGY=[32, 1], adduct=[32], precursor_mz=[32, 1], batch=[1555], ptr=[33])\n",
+      "DataBatch(x=[1570, 84], edge_index=[2, 3166], edge_attr=[3166, 7], y=[32, 1024], IDENTIFIER=[32], COLLISION_ENERGY=[32, 1], adduct=[32], precursor_mz=[32, 1], batch=[1570], ptr=[33])\n",
       "Batch size: 32\n",
-      "Node feature shape: torch.Size([1555, 84])\n",
-      "Edge index shape: torch.Size([2, 3164])\n",
-      "Edge feature shape: torch.Size([3164, 7])\n",
-      "Spectrum embedding shape: torch.Size([32, 1024])\n"
+      "Node feature shape: torch.Size([1570, 84])\n",
+      "Edge index shape: torch.Size([2, 3166])\n",
+      "Edge feature shape: torch.Size([3166, 7])\n",
+      "Spectrum embedding shape: torch.Size([32, 1024])\n",
+      "DataBatch(x=[891, 84], edge_index=[2, 1822], edge_attr=[1822, 7], y=[18, 1024], IDENTIFIER=[18], COLLISION_ENERGY=[18, 1], adduct=[18], precursor_mz=[18, 1], batch=[891], ptr=[19])\n",
+      "Batch size: 18\n",
+      "Node feature shape: torch.Size([891, 84])\n",
+      "Edge index shape: torch.Size([2, 1822])\n",
+      "Edge feature shape: torch.Size([1822, 7])\n",
+      "Spectrum embedding shape: torch.Size([18, 1024])\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 18
   },
   {
    "metadata": {
