adding head, and refactoring other parts

--- a/mol2dreams/notebooks/massspecgym_dreams_embedding.ipynb
+++ b/mol2dreams/notebooks/massspecgym_dreams_embedding.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:29:54.962030Z",
-     "start_time": "2024-10-07T09:29:50.059761Z"
+     "end_time": "2024-10-08T08:36:16.027531Z",
+     "start_time": "2024-10-08T08:36:09.979586Z"
     }
    },
    "source": [
@@ -37,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bl/73ckjztx5js4cc0cj85qgvlm0000gn/T/ipykernel_43067/1913502961.py:2: DeprecationWarning: 'cgitb' is deprecated and slated for removal in Python 3.13\n",
+      "/var/folders/bl/73ckjztx5js4cc0cj85qgvlm0000gn/T/ipykernel_55255/1913502961.py:2: DeprecationWarning: 'cgitb' is deprecated and slated for removal in Python 3.13\n",
       "  from cgitb import small\n",
       "/Users/macbook/UTILS/anaconda3/envs/mol2dreams/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
@@ -51,8 +51,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:29:55.098254Z",
-     "start_time": "2024-10-07T09:29:54.967892Z"
+     "end_time": "2024-10-08T08:36:16.170987Z",
+     "start_time": "2024-10-08T08:36:16.036732Z"
     }
    },
    "cell_type": "code",
@@ -86,8 +86,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:29:55.140874Z",
-     "start_time": "2024-10-07T09:29:55.138424Z"
+     "end_time": "2024-10-08T08:36:19.096369Z",
+     "start_time": "2024-10-08T08:36:19.094091Z"
     }
    },
    "cell_type": "code",
@@ -195,136 +195,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:29:55.160045Z",
-     "start_time": "2024-10-07T09:29:55.157403Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# def prepare_datasets(msdata, embs, splits=['train', 'val', 'test'], \n",
-    "#                     smiles_col='smiles', embedding_col='DreaMS_embedding', fold_col='FOLD',\n",
-    "#                     extra_cols=['COLLISION_ENERGY', 'adduct', 'precursor_mz']):\n",
-    "#     \"\"\"\n",
-    "#     Prepares train, validation, and test datasets from MSData and embeddings, ensuring unique IDENTIFIERs.\n",
-    "# \n",
-    "#     Args:\n",
-    "#         msdata (MSData): The MSData object loaded from HDF5.\n",
-    "#         embs (np.ndarray or torch.Tensor): Embeddings matrix with shape [num_samples, embedding_size].\n",
-    "#         splits (list of str): List of fold names to extract. Default is ['train', 'valid', 'test'].\n",
-    "#         smiles_col (str): Column name for SMILES strings in the DataFrame. Default is 'smiles'.\n",
-    "#         embedding_col (str): Column name for embeddings in the DataFrame. Default is 'DreaMS_embedding'.\n",
-    "#         fold_col (str): Column name for fold attribute in the DataFrame. Default is 'FOLD'.\n",
-    "#         extra_cols (list of str): Additional columns to include in the datasets.\n",
-    "# \n",
-    "#     Returns:\n",
-    "#         dict: A dictionary where keys are split names and values are lists of dictionaries \n",
-    "#               with 'smiles', 'embedding', and extra attributes.\n",
-    "#     \"\"\"\n",
-    "#     # Convert msdata to pandas DataFrame\n",
-    "#     df = msdata.to_pandas()\n",
-    "#     \n",
-    "#     # Check alignment\n",
-    "#     num_rows = df.shape[0]\n",
-    "#     if embs.shape[0] != num_rows:\n",
-    "#         raise ValueError(f\"Number of embeddings ({embs.shape[0]}) does not match number of data samples ({num_rows}).\")\n",
-    "#     \n",
-    "#     # Assign embeddings to the DataFrame\n",
-    "#     # Ensure embeddings are numpy arrays\n",
-    "#     if isinstance(embs, torch.Tensor):\n",
-    "#         embs = embs.numpy()\n",
-    "#     elif not isinstance(embs, np.ndarray):\n",
-    "#         embs = np.array(embs)\n",
-    "#     \n",
-    "#     df[embedding_col] = list(embs)\n",
-    "#     \n",
-    "#     datasets = {split: [] for split in splits}\n",
-    "#     \n",
-    "# \n",
-    "#     for split in splits:\n",
-    "#         split_df = df[df[fold_col] == split].reset_index(drop=True)\n",
-    "#         print(f\"Processing split '{split}' with {len(split_df)} samples.\")\n",
-    "#         \n",
-    "#         for idx, row in tqdm.tqdm(split_df.iterrows(), total=split_df.shape[0], desc=f\"Featurizing {split}\"):\n",
-    "#             identifier = row.get('IDENTIFIER', None)\n",
-    "#             smiles = row.get(smiles_col, None)\n",
-    "#             embedding = row.get(embedding_col, None)\n",
-    "#             \n",
-    "#             extra_attrs = {col: row.get(col, None) for col in extra_cols}\n",
-    "#             \n",
-    "#             if pd.isna(smiles):\n",
-    "#                 print(f\"Skipping row {idx} due to missing SMILES.\")\n",
-    "#                 continue\n",
-    "#             if pd.isna(identifier):\n",
-    "#                 print(f\"Skipping row {idx} due to missing IDENTIFIER.\")\n",
-    "#                 continue\n",
-    "#             if embedding is None or len(embedding) != embs.shape[1]:\n",
-    "#                 print(f\"Skipping row {idx} due to invalid embedding.\")\n",
-    "#                 continue\n",
-    "#             \n",
-    "#             datasets[split].append({\n",
-    "#                 'IDENTIFIER': identifier,\n",
-    "#                 'smiles': smiles,\n",
-    "#                 'embedding': embedding,\n",
-    "#                 **extra_attrs\n",
-    "#             })\n",
-    "#     \n",
-    "#     unique_folds = df[fold_col].unique()\n",
-    "#     additional_folds = set(unique_folds) - set(splits)\n",
-    "#     for split in additional_folds:\n",
-    "#         split_df = df[df[fold_col] == split].reset_index(drop=True)\n",
-    "#         print(f\"Processing additional split '{split}' with {len(split_df)} samples.\")\n",
-    "#         datasets[split] = []\n",
-    "#         for idx, row in tqdm(split_df.iterrows(), total=split_df.shape[0], desc=f\"Featurizing {split}\"):\n",
-    "#             identifier = row.get('IDENTIFIER', None)\n",
-    "#             smiles = row.get(smiles_col, None)\n",
-    "#             embedding = row.get(embedding_col, None)\n",
-    "#             \n",
-    "#             extra_attrs = {col: row.get(col, None) for col in extra_cols}\n",
-    "# \n",
-    "#             if pd.isna(smiles):\n",
-    "#                 print(f\"Skipping row {idx} in split '{split}' due to missing SMILES.\")\n",
-    "#                 continue\n",
-    "#             if pd.isna(identifier):\n",
-    "#                 print(f\"Skipping row {idx} in split '{split}' due to missing IDENTIFIER.\")\n",
-    "#                 continue\n",
-    "#             if embedding is None or len(embedding) != embs.shape[1]:\n",
-    "#                 print(f\"Skipping row {idx} in split '{split}' due to invalid embedding.\")\n",
-    "#                 continue\n",
-    "#             \n",
-    "#             datasets[split].append({\n",
-    "#                 'IDENTIFIER': identifier,\n",
-    "#                 'smiles': smiles,\n",
-    "#                 'embedding': embedding,\n",
-    "#                 **extra_attrs\n",
-    "#             })\n",
-    "#     \n",
-    "#     return datasets"
-   ],
-   "id": "87713a00e046a0f6",
-   "outputs": [],
-   "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-07T09:29:55.165698Z",
-     "start_time": "2024-10-07T09:29:55.164227Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "# hdf5_path = \"../../data/data/MassSpecGym_DreaMS.hdf5\"\n",
-    "# msdata = MSData.from_hdf5(hdf5_path, prec_mz_col='precursor_mz')"
-   ],
-   "id": "a30010d1895d01d8",
-   "outputs": [],
-   "execution_count": 7
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-07T09:29:55.173353Z",
-     "start_time": "2024-10-07T09:29:55.171040Z"
+     "end_time": "2024-10-08T08:36:30.724521Z",
+     "start_time": "2024-10-08T08:36:30.721136Z"
     }
    },
    "cell_type": "code",
@@ -350,18 +222,18 @@
        " 'spectrum']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:30:00.799774Z",
-     "start_time": "2024-10-07T09:29:55.184504Z"
+     "end_time": "2024-10-08T08:36:38.370539Z",
+     "start_time": "2024-10-08T08:36:32.700494Z"
     }
    },
    "cell_type": "code",
@@ -391,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Featurizing train: 100%|██████████| 194119/194119 [00:03<00:00, 53170.64it/s]\n"
+      "Featurizing train: 100%|██████████| 194119/194119 [00:03<00:00, 52709.04it/s]\n"
      ]
     },
     {
@@ -405,11 +277,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Featurizing val: 100%|██████████| 19429/19429 [00:00<00:00, 51265.86it/s]\n"
+      "Featurizing val: 100%|██████████| 19429/19429 [00:00<00:00, 51145.91it/s]\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 5
   },
   {
    "metadata": {
@@ -440,25 +312,25 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:30:00.820309Z",
-     "start_time": "2024-10-07T09:30:00.818792Z"
+     "end_time": "2024-10-08T08:37:05.975832Z",
+     "start_time": "2024-10-08T08:37:05.973245Z"
     }
    },
    "cell_type": "code",
    "source": [
     "small_dataset = {}\n",
-    "small_dataset['valid'] = datasets['train'][:50]\n",
-    "small_dataset['valid'] = datasets['val'][:50]"
+    "small_dataset['valid'] = datasets['train'][:100]\n",
+    "small_dataset['valid'] = datasets['val'][:100]"
    ],
    "id": "e56941028eb807f8",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:30:01.516287Z",
-     "start_time": "2024-10-07T09:30:00.826817Z"
+     "end_time": "2024-10-08T08:37:08.366964Z",
+     "start_time": "2024-10-08T08:37:06.852691Z"
     }
    },
    "cell_type": "code",
@@ -481,16 +353,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Featurizing dataset: 100%|██████████| 50/50 [00:00<00:00, 145.01it/s]\n",
-      "Featurizing dataset: 100%|██████████| 50/50 [00:00<00:00, 146.77it/s]"
+      "Featurizing dataset: 100%|██████████| 100/100 [00:00<00:00, 132.47it/s]\n",
+      "Featurizing dataset: 100%|██████████| 100/100 [00:00<00:00, 132.78it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of successfully featurized training molecules: 50\n",
-      "Number of successfully featurized validation molecules: 50\n"
+      "Number of successfully featurized training molecules: 100\n",
+      "Number of successfully featurized validation molecules: 100\n"
      ]
     },
     {
@@ -501,7 +373,7 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 9
   },
   {
    "metadata": {
@@ -585,8 +457,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:46:21.195150Z",
-     "start_time": "2024-10-07T09:46:19.330827Z"
+     "end_time": "2024-10-08T08:37:24.725887Z",
+     "start_time": "2024-10-08T08:37:23.146103Z"
     }
    },
    "cell_type": "code",
@@ -626,61 +498,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataBatch(x=[1570, 84], edge_index=[2, 3166], edge_attr=[3166, 7], y=[32, 1024], IDENTIFIER=[32], COLLISION_ENERGY=[32, 1], adduct=[32], precursor_mz=[32, 1], batch=[1570], ptr=[33])\n",
+      "DataBatch(x=[1406, 84], edge_index=[2, 2998], edge_attr=[2998, 7], y=[32, 1024], IDENTIFIER=[32], COLLISION_ENERGY=[32, 1], adduct=[32], precursor_mz=[32, 1], batch=[1406], ptr=[33])\n",
       "Batch size: 32\n",
-      "Node feature shape: torch.Size([1570, 84])\n",
-      "Edge index shape: torch.Size([2, 3166])\n",
-      "Edge feature shape: torch.Size([3166, 7])\n",
-      "Spectrum embedding shape: torch.Size([32, 1024])\n",
-      "DataBatch(x=[891, 84], edge_index=[2, 1822], edge_attr=[1822, 7], y=[18, 1024], IDENTIFIER=[18], COLLISION_ENERGY=[18, 1], adduct=[18], precursor_mz=[18, 1], batch=[891], ptr=[19])\n",
-      "Batch size: 18\n",
-      "Node feature shape: torch.Size([891, 84])\n",
-      "Edge index shape: torch.Size([2, 1822])\n",
-      "Edge feature shape: torch.Size([1822, 7])\n",
-      "Spectrum embedding shape: torch.Size([18, 1024])\n"
+      "Node feature shape: torch.Size([1406, 84])\n",
+      "Edge index shape: torch.Size([2, 2998])\n",
+      "Edge feature shape: torch.Size([2998, 7])\n",
+      "Spectrum embedding shape: torch.Size([32, 1024])\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Save for later use",
+   "id": "6aa57cb62675a193"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:30:03.148007Z",
-     "start_time": "2024-10-07T09:30:03.146473Z"
+     "end_time": "2024-10-08T08:38:39.573468Z",
+     "start_time": "2024-10-08T08:38:38.116341Z"
     }
    },
    "cell_type": "code",
-   "source": "",
-   "id": "1d2bd7aedaee81f8",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-07T09:30:03.160561Z",
-     "start_time": "2024-10-07T09:30:03.159276Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
+   "source": [
+    "torch.manual_seed(42)\n",
+    "\n",
+    "num_batches_to_save = 3\n",
+    "saved_batches = []\n",
+    "\n",
+    "for i, batch in enumerate(loader_train):\n",
+    "    if i >= num_batches_to_save:\n",
+    "        break\n",
+    "    saved_batches.append(batch)\n",
+    "\n",
+    "print(f\"Collected {len(saved_batches)} batches.\")"
+   ],
    "id": "85094161e9d5370a",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collected 3 batches.\n"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-07T09:30:03.173714Z",
-     "start_time": "2024-10-07T09:30:03.172434Z"
+     "end_time": "2024-10-08T08:39:29.837817Z",
+     "start_time": "2024-10-08T08:39:29.828820Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "save_path = \"../../data/data/precomputed_batches_small.pt\"\n",
+    "\n",
+    "# torch.save(saved_batches, save_path)\n",
+    "\n",
+    "print(f\"Saved {len(saved_batches)} batches to {save_path}.\")"
+   ],
    "id": "ba1515ebbc6fde28",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 3 batches to ../../data/data/precomputed_batches_small.pt.\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   }
  ],
  "metadata": {
